--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2021"
 parking_lot = "0.12.3"
 async-task = "4.7.1"
 crossbeam-utils = "0.8.21"
-crossbeam-deque = "0.8.6"
+concurrent-queue = "2.5.0"
 
 [dev-dependencies]
 winit = "0.30.7"
+criterion = "0.5"
+
+[[bench]]
+name = "bevy"
+harness = false
