--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 parking_lot = "0.12.3"
 async-task = "4.7.1"
 crossbeam-utils = "0.8.21"
-concurrent-queue = "2.5.0"
+crossbeam-queue = "0.3.12"
 
 [dev-dependencies]
 winit = "0.30.7"
