--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "forte"
-version = "0.1.0"
+version = "1.0.0-alpha.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "A low-overhead thread-pool with support for non-static async closures"
